# farm-simulator

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_ROADMAP.md  README.md  build-wasm.bat  build-wasm.sh  package-lock.json  package.json
bridge/: main.cpp
cpp-core/include/: Biome.h  Building.h  Crop.h  Farm.h  FarmBridge.h  FarmInfrastructure.h  Farmhouse.h  Fishing.h  Mine.h  NPC.h  Soil.h  World.h  WorldOpenWorld.h
cpp-core/src/: Biome.cpp  Building.cpp  Crop.cpp  Farm.cpp  FarmBridge.cpp  Farmhouse.cpp  Fishing.cpp  Mine.cpp  NPC.cpp  Soil.cpp  World.cpp  WorldOpenWorld.cpp
react-ui/: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
react-ui/src/: App.tsx  index.css
react-ui/src/bridge/: gameBridge.ts  types.ts
react-ui/src/components/game3d/: Game3D.tsx
react-ui/src/components/inventory/: InventoryItem.tsx  InventoryPanel.tsx
react-ui/src/components/ui/: AchievementPopup.tsx  LevelUpBanner.tsx  SettingsPanel.tsx
react-ui/src/game/: Animals3D.ts  CameraController.ts  EffectManager.ts  Environment3D.ts  FarmPlot3D.ts  FishingSystem.ts  GameScene.ts  Pet3D.ts  Player3D.ts  WeatherAndDay.ts  types3d.ts
react-ui/src/hooks/: useGameBridge.ts
react-ui/src/store/: audioSystem.ts  gameStore.ts  recipes.ts  saveSystem.ts
scripts/: build-wasm.mjs  dev-game.mjs
